[gd_scene load_steps=43 format=3 uid="uid://wovq0wkor258"]

[ext_resource type="Script" path="res://scripts/skeleton.gd" id="1_4cb0x"]
[ext_resource type="Texture2D" uid="uid://cq1dotlm7jx83" path="res://art/Skeleton/Idle.png" id="1_5t5ev"]
[ext_resource type="Texture2D" uid="uid://bb8ke62xkb8ot" path="res://art/Skeleton/Death.png" id="1_gcped"]
[ext_resource type="Texture2D" uid="uid://3qvsl2ugjncv" path="res://art/Skeleton/Attack.png" id="2_3q2u8"]
[ext_resource type="Texture2D" uid="uid://bnn7xfawdtqx1" path="res://art/Skeleton/Walk.png" id="2_lwvg7"]
[ext_resource type="Texture2D" uid="uid://cnmgr4poturrc" path="res://art/Skeleton/Take Hit.png" id="3_05kek"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xlvui"]
size = Vector2(14, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkk68"]
atlas = ExtResource("1_gcped")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdgdt"]
atlas = ExtResource("1_gcped")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_40fro"]
atlas = ExtResource("1_gcped")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bptcc"]
atlas = ExtResource("1_gcped")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl3gb"]
atlas = ExtResource("2_3q2u8")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bxxt"]
atlas = ExtResource("2_3q2u8")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgn8t"]
atlas = ExtResource("2_3q2u8")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e64e7"]
atlas = ExtResource("2_3q2u8")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsxvr"]
atlas = ExtResource("2_3q2u8")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygvxy"]
atlas = ExtResource("2_3q2u8")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcbeb"]
atlas = ExtResource("2_3q2u8")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_csfwr"]
atlas = ExtResource("2_3q2u8")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnujv"]
atlas = ExtResource("3_05kek")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_a88rg"]
atlas = ExtResource("3_05kek")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf2h1"]
atlas = ExtResource("3_05kek")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_780u0"]
atlas = ExtResource("3_05kek")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_83dfi"]
atlas = ExtResource("1_5t5ev")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uksb7"]
atlas = ExtResource("1_5t5ev")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_c478j"]
atlas = ExtResource("1_5t5ev")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1njo"]
atlas = ExtResource("1_5t5ev")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_61bwa"]
atlas = ExtResource("2_lwvg7")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy6yf"]
atlas = ExtResource("2_lwvg7")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5a83"]
atlas = ExtResource("2_lwvg7")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjcj4"]
atlas = ExtResource("2_lwvg7")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_wt55v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkk68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdgdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40fro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bptcc")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl3gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bxxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgn8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e64e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsxvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygvxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcbeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csfwr")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnujv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a88rg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tf2h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_780u0")
}],
"loop": false,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83dfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uksb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c478j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1njo")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61bwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy6yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5a83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjcj4")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rpnbn"]
radius = 125.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wxcgy"]
radius = 40.0

[sub_resource type="Animation" id="Animation_1qnbc"]
resource_name = "Death"

[sub_resource type="Animation" id="Animation_jweb6"]
resource_name = "Hit"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_m6hm5"]
resource_name = "Hurt"

[sub_resource type="Animation" id="Animation_kwbaj"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_h0cng"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_i3knf"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gcaj8"]
_data = {
"Death": SubResource("Animation_1qnbc"),
"Hit": SubResource("Animation_jweb6"),
"Hurt": SubResource("Animation_m6hm5"),
"Idle": SubResource("Animation_kwbaj"),
"RESET": SubResource("Animation_h0cng"),
"Walk": SubResource("Animation_i3knf")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1o21e"]
radius = 16.0

[node name="Skeleton" type="CharacterBody2D"]
script = ExtResource("1_4cb0x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_xlvui")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -1)
scale = Vector2(0.6, 0.672)
sprite_frames = SubResource("SpriteFrames_wt55v")
animation = &"Idle"
frame = 1

[node name="ChaseVision" type="Area2D" parent="."]

[node name="Chase" type="CollisionShape2D" parent="ChaseVision"]
shape = SubResource("CircleShape2D_rpnbn")

[node name="AttackVision" type="Area2D" parent="."]

[node name="Attack" type="CollisionShape2D" parent="AttackVision"]
shape = SubResource("CircleShape2D_wxcgy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gcaj8")
}

[node name="AttackHitbox" type="CollisionShape2D" parent="."]
position = Vector2(24, 0)
shape = SubResource("CircleShape2D_1o21e")

[connection signal="body_entered" from="ChaseVision" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="ChaseVision" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="AttackVision" to="." method="_on_attack_vision_body_entered"]
